--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,55 @@
-body {
-    font-family: 'Manrope', sans-serif;
+/* CARD CONTAINER */
+.card-container {
+    background-color: hsl(217, 19%, 24%);
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 1rem;
+}
+
+.card-container > * {
+    padding: 1rem 0;
+}
+
+.advice-nr {
+    color: hsl(150, 100%, 66%);
+}
+
+.advice-txt {
+    color: hsl(193, 38%, 86%);
+    font-size: 1.8rem;
+}
+
+.advice-dice {
+    border-radius: 50%;
+    padding: 1rem;
+    background-color: hsl(150, 100%, 66%);
+    width: 6rem;
+    height: 6rem;
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .2s;
+}
+
+.advice-dice:hover {
+    box-shadow: 0px 0px 1rem hsl(150, 100%, 66%);
+}
+
+.advice-dice img {
+    display: inline-block;
+}
+
+
+/* ATTRIBUTION */
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+    position: absolute;
+    bottom: 3rem;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
 }
