--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,31 @@
+/* GENERAL STYLES */
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+  
+* {
+    margin: 0;
+    padding: 0;
+}
+  
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.4rem; 
+    text-align: center;
+    font-family: 'Manrope', sans-serif;
+    background-color: hsl(218, 23%, 16%);
+    min-height: 100vh;
+    position: relative;
+    font-weight: 800;
+}
+
+a {
+    text-decoration: none;
+}
