--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,15 @@
 /* CARD CONTAINER */
 .card-container {
+    min-width: 320px;
+    max-width: 500px;
     background-color: hsl(217, 19%, 24%);
-    padding: 2rem;
+    padding: 6rem;
+    margin: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 1rem;
+    position: relative;
 }
 
 .card-container > * {
@@ -22,6 +26,11 @@
 }
 
 .advice-dice {
+    position: absolute;
+    bottom: -3rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     border-radius: 50%;
     padding: 1rem;
     background-color: hsl(150, 100%, 66%);
